[package]
name = "sglang-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", features = ["async", "napi4", "tokio_rt"] }
napi-derive = "2.12.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
sglang-router = { path = "../../" }
tracing = "0.1"
anyhow = "1.0"

[build-dependencies]
napi-build = "2.0.1"
